{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 70,
  "lineage": "b17204f5-9e24-117b-e874-4b34b05e97d2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:097681933692:internet-gateway/igw-0c4623bea897bdc43",
            "id": "igw-0c4623bea897bdc43",
            "owner_id": "097681933692",
            "tags": {
              "Environment": "development",
              "Name": "ltronix-shop-igw",
              "Project": "ltronix-shop"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "ltronix-shop-igw",
              "Project": "ltronix-shop"
            },
            "vpc_id": "vpc-079c4353fd0791621"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:097681933692:route-table/rtb-0858c7c9728d68264",
            "id": "rtb-0858c7c9728d68264",
            "owner_id": "097681933692",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c4623bea897bdc43",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "development",
              "Name": "ltronix-shop-public-route-table",
              "Project": "ltronix-shop"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "ltronix-shop-public-route-table",
              "Project": "ltronix-shop"
            },
            "timeouts": null,
            "vpc_id": "vpc-079c4353fd0791621"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07fc933552dffc0f4",
            "route_table_id": "rtb-0858c7c9728d68264",
            "subnet_id": "subnet-072a8b9ac8cf62b92"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0010cd5de291df43c",
            "route_table_id": "rtb-0858c7c9728d68264",
            "subnet_id": "subnet-009f323fe3cc1a8eb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:097681933692:subnet/subnet-072a8b9ac8cf62b92",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-072a8b9ac8cf62b92",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "097681933692",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "Name": "ltronix-shop-public-subnet-a",
              "Project": "ltronix-shop"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "ltronix-shop-public-subnet-a",
              "Project": "ltronix-shop"
            },
            "vpc_id": "vpc-079c4353fd0791621"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:097681933692:subnet/subnet-009f323fe3cc1a8eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-009f323fe3cc1a8eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "097681933692",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "Name": "ltronix-shop-public-subnet-b",
              "Project": "ltronix-shop"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "ltronix-shop-public-subnet-b",
              "Project": "ltronix-shop"
            },
            "vpc_id": "vpc-079c4353fd0791621"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:097681933692:vpc/vpc-079c4353fd0791621",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04a48d6b6df457770",
            "default_route_table_id": "rtb-0ad8fab401972fbc2",
            "default_security_group_id": "sg-0f8a2310927dd7e4b",
            "dhcp_options_id": "dopt-013519c321cd00b70",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-079c4353fd0791621",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ad8fab401972fbc2",
            "owner_id": "097681933692",
            "tags": {
              "Environment": "development",
              "Name": "ltronix-shop-vpc",
              "Project": "ltronix-shop"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "ltronix-shop-vpc",
              "Project": "ltronix-shop"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.elasticache",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elasticache_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:097681933692:security-group/sg-0fb2b3ca38422fa74",
            "description": "Allow inbound traffic to ElastiCache from anywhere (for dev)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fb2b3ca38422fa74",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "ltronix-shop-elasticache-sg",
            "name_prefix": "",
            "owner_id": "097681933692",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "development",
              "Project": "ltronix-shop"
            },
            "tags_all": {
              "Environment": "development",
              "Project": "ltronix-shop"
            },
            "timeouts": null,
            "vpc_id": "vpc-079c4353fd0791621"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:097681933692:security-group/sg-04dd7792805ea7816",
            "description": "Allow inbound traffic to RDS from anywhere (for dev)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04dd7792805ea7816",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "ltronix-shop-db-sg",
            "name_prefix": "",
            "owner_id": "097681933692",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "development",
              "Project": "ltronix-shop"
            },
            "tags_all": {
              "Environment": "development",
              "Project": "ltronix-shop"
            },
            "timeouts": null,
            "vpc_id": "vpc-079c4353fd0791621"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}